--- a/css/index.css
+++ b/css/index.css
@@ -17,7 +17,7 @@
     text-align: center;
     background-position: center center;
     max-width: 100%;
-    max-height: 100%;
+    height: 130%;
     color: white;
 
 
